♻️ Se implementa ssr, Rick Agrega logica form

--- a/src/components/organisms/Social/Social.astro
+++ b/src/components/organisms/Social/Social.astro
@@ -2,6 +2,7 @@
 import Title from "@atoms/Title/Title";
 import SocialCard from "@molecules/SocialCard/SocialCard.astro";
 import ContactFormContent from "@src/components/molecules/ContactFormContent/ContactFormContent.astro";
+import FormContact from "@src/components/molecules/ContactFormContent/FormContact.astro";
 import DiscordCardContent from "@src/components/molecules/DiscordCardContent/DiscordCardContent.astro";
 import YoutubeCardContent from "@src/components/molecules/YoutubeCardContent/YoutubeCardContent.astro";
 import YoutubeModal from "@src/components/molecules/YoutubeModal/YoutubeModal.astro";
@@ -26,7 +27,7 @@ import YoutubeModal from "@src/components/molecules/YoutubeModal/YoutubeModal.as
     </div>
     <div class="social__item social__item-3">
       <SocialCard>
-        <ContactFormContent />
+        <FormContact />
       </SocialCard>
     </div>
     <div class="social__item social__item-4">
