--- a/src/components/molecules/ContactFormContent/ContactFormContent.astro
+++ b/src/components/molecules/ContactFormContent/ContactFormContent.astro
@@ -4,7 +4,7 @@ import { sendEmail } from "server";
 let errors = { name: "", email: "", message: "", subject: "" };
 let successMessage = "";
 
-  // cala esto aver si sirve sofi
+  // cala esto aver si sirve sofi espero que si sirva antes de subir cala el codigo
 
 if (Astro.request.method === "POST") {
   try {
@@ -50,19 +50,18 @@ if (Astro.request.method === "POST") {
     const form = document.querySelector("form");
 
     form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-
+      // e.preventDefault();
       const formData = new FormData(form);
-
       try {
         const response = await fetch(form.action, {
           method: "POST",
           body: formData,
         });
-
         if (response.ok) {
           const result = await response.json();
           console.log(result.message || "Form submitted successfully!");
+          form.reset();
+          // Me deconecto espero haberte ayudado ! 😊
           // Aquí puedes manejar el resultado de manera dinámica, por ejemplo:
           // Mostrar un mensaje de éxito, limpiar el formulario, etc.
         } else {
