:lock: test the env BACKEND whit file env.test

--- a/src/components/molecules/ContactFormContent/FormContact.astro
+++ b/src/components/molecules/ContactFormContent/FormContact.astro
@@ -3,7 +3,7 @@ import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
 ---
 
 <Subtitle content="Get in touch with Me " />
-<form method="POST" novalidate>
+<form>
   <div>
     <label for="name">Your Name: * </label>
     <input type="text" id="name" name="name" required />
