🐛 Nodemailer logic fixed

--- a/src/components/organisms/Social/Social.astro
+++ b/src/components/organisms/Social/Social.astro
@@ -18,7 +18,8 @@ import YoutubeModal from "@src/components/molecules/YoutubeModal/YoutubeModal.as
   <div class="social__grid">
     <div class="social__item social__item-1">
       <SocialCard>
-        <DiscordCardContent />
+        <!-- <DiscordCardContent /> -->
+         <!-- <ContactFormContent /> -->
       </SocialCard>
     </div>
     <div class="social__item social__item-2">
@@ -32,7 +33,9 @@ import YoutubeModal from "@src/components/molecules/YoutubeModal/YoutubeModal.as
       </SocialCard>
     </div>
     <div class="social__item social__item-4">
-      <SocialCard />
+      <SocialCard >
+        <!-- <FormContact /> -->
+      </SocialCard>
     </div>
   </div>
   <div class="social__background"></div>
