--- a/src/components/organisms/Social/Social.astro
+++ b/src/components/organisms/Social/Social.astro
@@ -18,8 +18,8 @@ import YoutubeModal from "@src/components/molecules/YoutubeModal/YoutubeModal.as
   <div class="social__grid">
     <div class="social__item social__item-1">
       <SocialCard>
-        <!-- <DiscordCardContent /> -->
-         <!-- <ContactFormContent /> -->
+        <DiscordCardContent />
+
       </SocialCard>
     </div>
     <div class="social__item social__item-2">
