--- a/src/components/organisms/Social/Social.astro
+++ b/src/components/organisms/Social/Social.astro
@@ -5,6 +5,7 @@ import DiscordCardContent from "@molecules/DiscordCardContent/DiscordCardContent
 import YoutubeCardContent from "@molecules/YoutubeCardContent/YoutubeCardContent.astro";
 import YoutubeModal from "@molecules/YoutubeModal/YoutubeModal.astro";
 import ContactFormMain from "@molecules/ContactFormContent/ContactFormMain.astro";
+import ToastNotification from "@src/components/atoms/ToastNotification/ToastNotification.astro";
 ---
 
 <section id="social" class="social">
@@ -39,3 +40,4 @@ import ContactFormMain from "@molecules/ContactFormContent/ContactFormMain.astro
   <div class="social__background"></div>
   <YoutubeModal />
 </section>
+<ToastNotification />
