--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import "@atoms/BackgroundIconsFloat/bg-icons";
 @import "@atoms/ButtonAbout/button-about";
 @import "@atoms/BarraTerminal/barra-terminal";
+@import '@atoms/ToastNotification/toast-notification';
 @import "@molecules/Header/header";
 @import "@molecules/Carousel/carousel";
 @import "@molecules/GithubCalendar/github-calendar";
