--- a/src/components/molecules/ContactFormContent/ContactFormMain.astro
+++ b/src/components/molecules/ContactFormContent/ContactFormMain.astro
@@ -1,39 +1,38 @@
 ---
 import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
 ---
-<script>
-  import {formValidation} from "@controllers/formValidation.controller";
-  formValidation();
 
+<script>
+  import { formValidation } from "@controllers/formValidation.controller";
+  formValidation();
 </script>
 
 <Subtitle content="Get in touch with Me " />
 
-<form method="POST" novalidate>
-  <div>
+<form class="contact" method="POST" novalidate>
+  <div class="form__group form__group-name">
     <label for="name">Your Name: * </label>
     <input type="text" id="name" name="name" required />
-    <div class="error__msg" id="nameError"></div>
+    <span class="error__msg" id="nameError"></span>
+  </div>
+  <div class="form__container">
+    <div class="form__group form__group-email">
+      <label for="email">Your Email: *</label>
+      <input type="email" id="email" name="email" required />
+      <span class="error__msg" id="emailError"></span>
+    </div>
+    <div class="form__group form__group-subject">
+      <label for="subject">Subject: *</label>
+      <input type="text" id="subject" name="subject" required />
+      <span class="error__msg" id="subjectError"></span>
+    </div>
   </div>
 
-  <div>
-    <label for="email">Your Email: *</label>
-    <input type="email" id="email" name="email" required />
-    <div class="error__msg" id="emailError"></div>
-  </div>
-
-  <div>
-    <label for="subject">Subject: *</label>
-    <input type="text" id="subject" name="subject" required />
-    <div class="error__msg" id="subjectError"></div>
-  </div>
-
-  <div>
+  <div class="form__group form__group-message">
     <label for="message">Message: *</label>
     <textarea id="message" name="message" rows="4" required></textarea>
-    <div class="error__msg" id="messageError"></div>
+    <span class="error__msg" id="messageError"></span>
   </div>
-
   <div class="loader"></div>
   <button class="form__submit" type="submit" value="Send">Send</button>
 </form>
