--- a/src/components/molecules/ContactFormContent/_contact-form.scss
+++ b/src/components/molecules/ContactFormContent/_contact-form.scss
@@ -1,3 +1,17 @@
+.form{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.form__group{
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+.form__container{
+  display: flex;
+}
+
 .error__msg {
   color: tomato;
   font-size: 1.4rem;
