Se remplazo el origen de la data por astro props

--- a/src/components/molecules/CarouselSkills/CarrouselSkills.astro
+++ b/src/components/molecules/CarouselSkills/CarrouselSkills.astro
@@ -1,6 +1,6 @@
 ---
 import Carousel from "@molecules/Carousel/Carousel.astro";
-import { skillsData } from "@src/data/skillsData";
+const { skillsData } = Astro.props
 ---
 
 
