--- a/src/components/molecules/CarouselTools/CarouselTools.astro
+++ b/src/components/molecules/CarouselTools/CarouselTools.astro
@@ -1,8 +1,6 @@
 ---
 import Carousel from "@molecules/Carousel/Carousel.astro";
-import { toolsData } from "@src/data/ToolsData";
-
-
+const {toolsData} = Astro.props
 ---
 
 <Carousel clase="slide__track--tools">
