--- a/src/components/molecules/ContactFormContent/ContactFormMain.astro
+++ b/src/components/molecules/ContactFormContent/ContactFormMain.astro
@@ -8,30 +8,29 @@ import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
 </script>
 
 <Subtitle content="Get in touch with Me " />
-
 <form class="contact" method="POST" novalidate>
   <div class="form__group form__group-name">
     <label for="name">Your Name: * </label>
-    <input type="text" id="name" name="name" required />
-    <span class="error__msg" id="nameError"></span>
+    <input  type="text" id="name" name="name" required />
+   <!--  <span class="error__msg" id="nameError"></span> -->
   </div>
   <div class="form__container">
     <div class="form__group form__group-email">
       <label for="email">Your Email: *</label>
       <input type="email" id="email" name="email" required />
-      <span class="error__msg" id="emailError"></span>
+    <!--   <span class="error__msg" id="emailError"></span> -->
     </div>
     <div class="form__group form__group-subject">
       <label for="subject">Subject: *</label>
       <input type="text" id="subject" name="subject" required />
-      <span class="error__msg" id="subjectError"></span>
+     <!--  <span class="error__msg" id="subjectError"></span> -->
     </div>
   </div>
 
   <div class="form__group form__group-message">
     <label for="message">Message: *</label>
     <textarea id="message" name="message" rows="4" required></textarea>
-    <span class="error__msg" id="messageError"></span>
+   <!--  <span class="error__msg" id="messageError"></span> -->
   </div>
   <div class="loader"></div>
   <button class="form__submit" type="submit" value="Send">Send</button>
