💄 Se agregan estilos section/Social
Se agregan estilos a formulario, se corrige responsive

--- a/src/components/molecules/DiscordCardContent/DiscordCardContent.astro
+++ b/src/components/molecules/DiscordCardContent/DiscordCardContent.astro
@@ -2,21 +2,22 @@
 import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
 ---
 
+<div class="card-social__container">
 <Subtitle content="Join our Discord community" />
-
-<p class="card-social__content">
-  Connect with web developers, share resources, and get help on your frontend
-  projects.
-</p>
-<a class="card-social__link" href="/">
-  Join our community <iconify-icon
-    icon="quill:link-out"
-    width="15"
-    height="15"
-    style="color: aqua"></iconify-icon></a
->
-<img
-  class="card-social__image"
-  src="../img/icons/DiscordLogo.svg"
-  alt="Discord logo"
-/>
+  <p class="card-social__content">
+    Connect with web developers, share resources, and get help on your frontend
+    projects.
+  </p>
+  <a class="card-social__link" href="/">
+    Join our community <iconify-icon
+      icon="quill:link-out"
+      width="15"
+      height="15"
+      style="color: aqua"></iconify-icon></a
+  >
+  <img
+    class="card-social__image"
+    src="../img/icons/DiscordLogo.svg"
+    alt="Discord logo"
+  />
+</div>
