--- a/src/components/molecules/ContactFormContent/_contact-form.scss
+++ b/src/components/molecules/ContactFormContent/_contact-form.scss
@@ -1,27 +1,32 @@
-.form{
+.contact {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: .4rem 1rem;
+  padding: 0.4rem 1rem;
+  gap: 1rem;
 }
-.form__group{
+
+.form__group {
+  width: 100%;
   display: flex;
   flex-direction: column;
+
   color: white;
-  input{
-    padding: .6rem;
+  input {
+    padding: 0.6rem;
   }
-  label{
+  label {
     font-size: 1.3rem;
   }
-  textarea{
-    padding: .6rem;
+  textarea {
+    padding: 0.6rem;
     resize: none;
+    height: 100%;
+    min-height: 10rem;
+    overflow: auto;
   }
 }
-.form__container{
-  display: flex;
-}
+
 .error__msg {
   color: tomato;
   font-size: 1.4rem;
@@ -30,6 +35,22 @@
 .input-error {
   border-color: tomato;
 }
+.form__container {
+  display: flex;
+  gap: .5rem;
+  flex-wrap: wrap;
+  .form__group-email {
+    flex-basis: 60%;
+  }
+  .form__group-subject {
+    flex: 1;
+  }
+}
+
 .form__submit {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
+  padding: 1rem;
+  width: 100%;
+  font-size: 1.4rem;
+  background: v.$bg-image;
 }
