--- a/src/components/molecules/SocialCard/_social-card.scss
+++ b/src/components/molecules/SocialCard/_social-card.scss
@@ -14,6 +14,13 @@
   border: 0.5px solid rgba(57, 255, 255, 0.305);
   transition:background 0.5s ease-in-out;
 
+  .card-social__container{
+    min-height: 25dvh;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 1rem;
+  }
   .card-social__content{
     color: white;
     font-weight: 400;
@@ -73,4 +80,15 @@
   top: 33%;
   left: 53%;
   transform: rotate(0deg);
+}
+
+@include respond-to("medium"){
+  .card-social {
+    padding: 1rem;
+
+    .card-social__content{
+      font-size: 1.5rem;
+    }
+  }
+
 }
