--- a/src/components/molecules/YoutubeCardContent/YoutubeCardContent.astro
+++ b/src/components/molecules/YoutubeCardContent/YoutubeCardContent.astro
@@ -52,7 +52,7 @@ import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
     loadVideo(iframes[0]);
   }
 </script>
-
+<div class="card-social__container">
 <Subtitle content="My Latest Youtube video" />
 <p class="card-social__content">I love sharing the knowledge I've gained over the years on my YouTube channel. Check out my latest video and join me on this learning journey!</p>
 
@@ -60,7 +60,7 @@ import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
 <button class="youtube__button" >
   <img class="youtube__button__play" src="/img/icons/btn-play.svg" alt="boton to play" />
 </button>
-
+</div>
 <style lang="scss" is:global
 >
   .youtubeThumbnail {
