--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ export const prerender = true;
 
 <Layout>
   <BackgroundGradient >
-    <Hero />
+    <Hero data={user} />
   </BackgroundGradient>
   <DividerTop/>
   <About data={user}/>
