--- a/src/components/atoms/ProfilePicture/ProfilePicture.astro
+++ b/src/components/atoms/ProfilePicture/ProfilePicture.astro
@@ -1,5 +1,5 @@
 ---
-import { userData as data } from "@src/data/userData";
+const { data } = Astro.props
 ---
 
 <script >
@@ -10,16 +10,12 @@ import { userData as data } from "@src/data/userData";
 
 <div class="image__container">
     <button class="image__button">
-        {
-            data.profilePicture && (
                 <img
-                src="../img/sofi-pic-1.webp"
+                src={data}
                 id="profile-picture"
                 class="hero__img hero-profile-img"
                 alt="Profile Picture"
                 />
-            )
-        }
   </button>
   <div class="hero__skills">
       <!-- Iconos rendered by a template string -->
