--- a/src/components/organisms/About/About.astro
+++ b/src/components/organisms/About/About.astro
@@ -12,7 +12,7 @@ const { data } = Astro.props
       <div class="profile__box">
         <img
           src={data.aboutPicture}
-          alt=""
+          alt={`Fot de perfil de  ${data.name} ${data.lastName}`}
           class="profile__img"
           width="100"
           height="100"
@@ -33,6 +33,4 @@ const { data } = Astro.props
     </div>
   </article>
   <Calendar client:only />
-
-
 </section>
