--- a/src/components/molecules/ContactFormContent/ContactFormMain.astro
+++ b/src/components/molecules/ContactFormContent/ContactFormMain.astro
@@ -1,5 +1,6 @@
 ---
 import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
+import Button from "@atoms/Button/Button.astro";
 ---
 
 <script>
@@ -33,5 +34,6 @@ import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
     <span class="error__msg" id="messageError"></span>
   </div>
   <div class="loader"></div>
-  <button class="form__submit" type="submit" value="Send">Send</button>
+  <Button type="submit" value="Send" content="Send" />
+
 </form>
