--- a/src/components/molecules/Header/Header.astro
+++ b/src/components/molecules/Header/Header.astro
@@ -3,6 +3,7 @@ import { menuData } from "@data/menuData";
 import Logo from "@atoms/Logo/Logo.astro";
 import HamburgerButton from "@atoms/hamburgerBtn/HamburgerBtn.astro";
 import SocialIcons from "@atoms/SocialIcons/SocialIcons.astro";
+import LanguageFlag from "@src/components/atoms/LanguageFlag/LanguageFlag.astro";
 const pagePathname = Astro.url.pathname;
 ---
 
@@ -31,6 +32,7 @@ const pagePathname = Astro.url.pathname;
             </li>
           ))
         }
+        <LanguageFlag />
         <div class="header__icons">
           <SocialIcons />
         </div>
