--- a/src/components/molecules/Header/_header.scss
+++ b/src/components/molecules/Header/_header.scss
@@ -1,5 +1,6 @@
 @import "@atoms/Logo/logo";
 @import "@atoms/hamburgerBtn/hamburger";
+@import "@atoms/LanguageFlag/language-flag";
 
 .header {
   @include centerFlex(center);
@@ -7,7 +8,7 @@
   position: fixed;
   padding: 0 2rem;
   z-index: 100;
-  .header__container {
+  &__container {
     backdrop-filter: blur(20px);
     @include centerFlex(space-between);
     width: 100%;
@@ -20,7 +21,7 @@
     padding: 1rem 2rem;
   }
 
-  .header__list > *:not(a) {
+  &__list > *:not(a) {
     margin-right: 1.5rem;
     @include respond-to("medium") {
       margin-bottom: 2rem;
@@ -29,18 +30,19 @@
       }
     }
   }
-}
-.header__menu {
-  @include centerFlex(flex-start);
-  .header__list {
-    display: flex;
-    .header__icons{
-      display: none;
-      @include respond-to("medium"){
-        display: block;
+  &__menu {
+    @include centerFlex(flex-start);
+    .header__list {
+      display: flex;
+      align-items: center;
+      .header__icons{
+        display: none;
+        @include respond-to("medium"){
+          display: block;
+        }
       }
     }
-  }
+}
 
 
   .header__link {
@@ -87,25 +89,27 @@
       backdrop-filter: none;
       -webkit-backdrop-filter: none;
     }
+    &__menu {
+      transition: all 0.6s ease;
+      position: absolute;
+      transform: translateX(100%);
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 100dvh;
+      padding-left: 3rem;
+      .header__list {
+        width: 100%;
+        height: 100dvh;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding-top: 14rem;
+      }
+    }
   }
 
-  .header__list {
-    width: 100%;
-    height: 100dvh;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 14rem;
-  }
-  .header__menu {
-    transition: all 0.6s ease;
-    position: absolute;
-    transform: translateX(100%);
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100dvh;
-    padding-left: 3rem;
-  }
+
   .header__menu.is-active {
     transform: translateX(0%);
     background: black;
