--- a/src/components/molecules/SocialCard/_social-card.scss
+++ b/src/components/molecules/SocialCard/_social-card.scss
@@ -1,3 +1,5 @@
+@import "@atoms/SocialCardImage/social-card-image";
+
 .card-social {
   display: flex;
   justify-content: flex-start;
@@ -62,25 +64,7 @@
   opacity: .3;
   z-index: -1;
 }
-.card-social__image {
-  z-index: -1;
-  width: 210px;
-  height: 170px;
-  position: absolute;
-  top: 34%;
-  left: 63%;
-  transform: rotate(30deg);
-  transition: all 0.3s linear;
-}
-.card-social:hover {
-  background: #0e0528ea;
-}
 
-.card-social:hover .card-social__image {
-  top: 33%;
-  left: 53%;
-  transform: rotate(0deg);
-}
 
 @include respond-to("medium"){
   .card-social {
