--- a/src/components/molecules/YoutubeCardContent/YoutubeCardContent.astro
+++ b/src/components/molecules/YoutubeCardContent/YoutubeCardContent.astro
@@ -1,65 +1,17 @@
 ---
 import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
-
+import Button from "@atoms/Button/Button.astro";
+import SocialCardImage from "@src/components/atoms/SocialCardImage/SocialCardImage.astro";
 
 ---
-<script>
-  import  {YT_API_KEY} from 'astro:env/client';
-  const loadVideo = async (iframe) => {
-    const cid = "UC36_js-krsAHAEAWpEDhHtw"; //this is the Channel ID from your Youtube channel URL
-    const API_key =`${YT_API_KEY}`; //in order to get your free public API_key, you will need to create an acc. in https://rss2json.com/
-    const channelURL = encodeURIComponent(
-      `https://www.youtube.com/feeds/videos.xml?channel_id=${cid}`
-    );
-    const reqURL = `https://api.rss2json.com/v1/api.json?rss_url=${channelURL}&api_key=${API_key}`;
-    try {
-      const response = await fetch(reqURL);
-      if (!response.ok) {
-        throw new Error(`HTTP error! status: ${response.status}`);
-      }
-      const result = await response.json();
 
-
-      if (result.items && result.items.length > 0) {
-        const videoNumber = iframe.getAttribute("vnum");
-        const link = result.items[videoNumber].link;
-        const id = link.split("v=")[1];
-        const thumbvid = result.items[videoNumber].image;
-        iframe.setAttribute(
-          "src",
-          `https://youtube.com/embed/${id}?controls=1&autoplay=0`
-        );
-
-        const videoResponse = result.items[0];
-        const videoThumbnail = document.querySelector(
-          ".youtubeThumbnail"
-        ) as HTMLElement;
-        if (videoResponse.thumbnail === "") {
-          videoThumbnail.style.backgroundImage = `url('/img/portadaLIVE.png')`;
-        } else {
-          videoThumbnail.style.backgroundImage = `url(${videoResponse.thumbnail})`;
-        }
-      } else {
-        throw new Error("No videos found in the feed.");
-      }
-    } catch (error) {
-      console.error("Error loading video:", error);
-    }
-  };
-
-  const iframes = document.getElementsByClassName("latestVideoEmbed");
-  if (iframes.length > 0) {
-    loadVideo(iframes[0]);
-  }
-</script>
 <div class="card-social__container">
 <Subtitle content="My Latest Youtube video" />
 <p class="card-social__content">I love sharing the knowledge I've gained over the years on my YouTube channel. Check out my latest video and join me on this learning journey!</p>
 
 <div class="youtubeThumbnail"></div>
-<button class="youtube__button" >
-  <img class="youtube__button__play" src="/img/icons/btn-play.svg" alt="boton to play" />
-</button>
+<Button type="button" content="Watch" extraClass="youtube__button"/>
+<SocialCardImage image="/img/icons/youtube.svg" altDesc="Youtube logo" />
 </div>
 <style lang="scss" is:global
 >
@@ -72,29 +24,13 @@ import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
     top: -17%;
     left: 0;
     mix-blend-mode: multiply;
-    filter: opacity(0.1);
+    filter: opacity(0.5) blur(4px);
     overflow: hidden;
   }
 
-  .youtube__button{
-    background: none ;
-    width: fit-content;
-  }
-  .youtube__button__play{
-    position: absolute;
-    top: 65%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80px;
-    height: 80px;
-    z-index: 1;
-    filter: opacity(0);
-    transition: filter .3s ease-in, transform .3s ease-in;
-
-    &:hover{
-      transform:translate(-50%, -50%) scale(.85);
-    }
-  }
+.youtube__button{
+  max-width: 10rem;
+}
 
   .youtube__card:hover  .youtube__button__play{
     filter: opacity(1);
