--- a/src/components/organisms/Portfolio/Portfolio.astro
+++ b/src/components/organisms/Portfolio/Portfolio.astro
@@ -1,6 +1,7 @@
 ---
 import CardPortfolio from "../../molecules/CardPortfolio/CardPortfolio.astro";
 import { skillsIconsMapped} from "@src/data/portfolioData";
+export const prerender = true;
 ---
 
 <section class="portfolio" id="portfolio">
