--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import { getData } from "@src/services/data"
+const { user, skills, tools, socialIcons } = await getData()
 import BackgroundGradient from "@src/layouts/BackgroundGradient/BackgroundGradient.astro";
 import Layout from "../layouts/Layout.astro";
 import Hero from "@src/components/organisms/Hero/Hero.astro";
@@ -8,19 +10,18 @@ import DividerTop from "@src/components/atoms/DividerTop/DividerTop.astro";
 import Skills from "@src/components/organisms/Skills/Skills.astro";
 import Portfolio from "@src/components/organisms/Portfolio/Portfolio.astro";
 import Social from "@src/components/organisms/Social/Social.astro";
-import { getData } from "@src/services/data"
+
 export const prerender = true;
-const { user, skills, tools } = await getData()
 
 
 ---
 
 <Layout>
   <BackgroundGradient >
-    <Hero data={user} />
+    <Hero data={user} socialIcons={socialIcons}/>
   </BackgroundGradient>
   <DividerTop/>
-  <About data={user}/>
+  <About data={user} />
   <DividerBottom fill="shape-fill-3"/>
   <Skills data={user}, skills={skills} tools={tools} />
   <DividerTop fill="shape-fill-purple "/>
