--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -14,7 +14,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const {
   title,
   description,
-  image = "/public/img/icons/sofi-icon.webp",
+  image = "/img/icons/sofi-icon.webp",
 } = Astro.props;
 ---
 
