--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import DividerTop from "@src/components/atoms/DividerTop/DividerTop.astro";
 import Skills from "@src/components/organisms/Skills/Skills.astro";
 import Portfolio from "@src/components/organisms/Portfolio/Portfolio.astro";
 import Social from "@src/components/organisms/Social/Social.astro";
-// export const prerender = true;
+export const prerender = true;
 import { getData } from "@src/services/data"
-const { user, skills, tools, socialIcons } = await getData()
+const { user, skills, tools, socialIcons } = await getData();
 
 
 
