--- a/src/components/molecules/ContactFormContent/ContactFormMain.astro
+++ b/src/components/molecules/ContactFormContent/ContactFormMain.astro
@@ -1,21 +1,19 @@
 ---
 import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
 import Button from "@atoms/Button/Button.astro";
+import Loader from "@src/components/atoms/Loader/Loader.astro";
 ---
 
 <script>
-  import { formValidation } from "./ValidationForm";
+  import { formValidation } from "../../../controllers/ValidationForm";
 
-  const button = document.querySelector(
-    "#button-send-email-form"
-  ) as HTMLButtonElement;
-
-  button.addEventListener("click", () => {
+  // Ensure formValidation sets up the necessary event listeners
+  document.addEventListener("DOMContentLoaded", () => {
     formValidation();
   });
 </script>
 
-<Subtitle content="Get in touch with Me " />
+<Subtitle content="Get in touch with Me" />
 <form class="contact" method="POST" novalidate>
   <div class="form__group form__group-name">
     <label for="name">Your Name: * </label>
@@ -40,6 +38,6 @@ import Button from "@atoms/Button/Button.astro";
     <textarea id="message" name="message" rows="4" required></textarea>
     <span class="error__msg" id="messageError"></span>
   </div>
-  <div class="loader"></div>
-  <Button content="Send" type="button" id="button-send-email-form" />
+  <Loader/>
+  <Button content="Send" type="submit" id="button-send-email-form" />
 </form>
