--- a/src/components/molecules/ContactFormContent/_contact-form.scss
+++ b/src/components/molecules/ContactFormContent/_contact-form.scss
@@ -31,6 +31,9 @@
   color: tomato;
   font-size: 1.4rem;
 }
+.input-success {
+  border: 2px solid lime;
+}
 
 .input-error {
   border-color: tomato;
