--- a/src/components/organisms/Hero/_hero.scss
+++ b/src/components/organisms/Hero/_hero.scss
@@ -60,6 +60,8 @@
       @media screen and (max-width:728px) {
         font-size: 1.8rem;
         letter-spacing: normal;
+        animation: none;
+        border-right: none;
       }
   }
 }
