--- a/src/layouts/LayoutNoHeader.astro
+++ b/src/layouts/LayoutNoHeader.astro
@@ -1,8 +1,7 @@
 ---
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import BaseHead from "@components/BaseHead.astro";
 import ThemeIcon from "@src/components/atoms/ThemeIcon.astro";
-import BaseHead from "../components/BaseHead.astro";
-import Header from "@molecules/Header/Header.astro";
-import ButtonToTop from "@src/components/atoms/ButtonToTop/ButtonToTop.astro";
 const pathName = Astro.url.pathname;
 
 ---
@@ -17,8 +16,6 @@ const pathName = Astro.url.pathname;
   </head>
   <body>
     <ThemeIcon />
-    <ButtonToTop />
-    <Header />
     <main>
       <slot />
     </main>
