--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import "@atoms/ButtonAbout/button-about";
 @import "@atoms/BarraTerminal/barra-terminal";
 @import '@atoms/ToastNotification/toast-notification';
+@import "@molecules/BlogPost/post-card";
 @import "@molecules/Header/header";
 @import "@molecules/Carousel/carousel";
 @import "@molecules/GithubCalendar/github-calendar";
