--- a/src/components/organisms/Social/Social.astro
+++ b/src/components/organisms/Social/Social.astro
@@ -6,6 +6,8 @@ import YoutubeCardContent from "@molecules/YoutubeCardContent/YoutubeCardContent
 import YoutubeModal from "@molecules/YoutubeModal/YoutubeModal.astro";
 import ContactFormMain from "@molecules/ContactFormContent/ContactFormMain.astro";
 import ToastNotification from "@src/components/atoms/ToastNotification/ToastNotification.astro";
+import BlogPost from "@src/components/molecules/BlogPost/BlogPost";
+import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
 
 ---
 
@@ -33,10 +35,10 @@ import ToastNotification from "@src/components/atoms/ToastNotification/ToastNoti
     </div>
     <div class="social__item social__item-4">
       <SocialCard >
+        <BlogPost />
       </SocialCard>
     </div>
   </div>
-  <div class="social__background"></div>
   <YoutubeModal />
 </section>
 <ToastNotification />
