--- a/src/components/molecules/Header/Header.astro
+++ b/src/components/molecules/Header/Header.astro
@@ -37,7 +37,7 @@ const { blog } = Astro.props;
           </li>
         ))}
         <div class="header__icons">
-          <SocialIcons />
+          <SocialIcons  isAnimated={false}/>
         </div>
       </ul>
     </nav>
