--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import '@atoms/ToastNotification/toast-notification';
 @import "@molecules/BlogPost/post-card";
 @import "@molecules/Header/header";
+@import "@molecules/Footer/footer";
 @import "@molecules/Carousel/carousel";
 @import "@molecules/GithubCalendar/github-calendar";
 @import "@molecules/CardTerminal/card-terminal";
